--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -27,9 +27,11 @@
     <body>
     {%include "partials/header.html.twig"%}
 
-        {% block body %}{% endblock %}
-
+        {% block body %}
+            
+        {% endblock %}
     {%include "partials/footer.html.twig"%}
+
     </body>
         {% block javascripts %}
             {{ encore_entry_script_tags('app') }}
