--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -34,9 +34,15 @@
                 <div class="col-md-6">
                     <div class="text-center text-md-right">
                            <ul class="header_list">
-                            <li><a href=""><i class="ti-control-shuffle"></i><span>Compare</span></a></li>
+                            <li><a href=""><i class="ti-control-shuffle"></i><span>Je Compare</span></a></li>
                             <li><a href=""><i class="ti-heart"></i><span>Wishlist</span></a></li>
-                            <li><a href=""><i class="ti-user"></i><span>Login</span></a></li>
+                        {% if app.user %}
+                                <li><a href="{{path('app_logout')}}"><i class="ti-user"></i><span>Logout</span></a></li>
+                            {% else %}
+                                <li><a href="{{path('app_login')}}"><i class="ti-user"></i><span>Connexion</span></a></li>
+                                <li><a href="{{path('app_register')}}"><i class="fa-solid fa-user-plus"></i><span>Inscription</span></a></li>
+
+                        {% endif %}
                         </ul>
                     </div>
                 </div>
