--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,21 +1,71 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Register{% endblock %}
+{% block title %}Register
+{% endblock %}
 
 {% block body %}
-    {% for flash_error in app.flashes('verify_email_error') %}
-        <div class="alert alert-danger" role="alert">{{ flash_error }}</div>
-    {% endfor %}
+	{{include ("partials/title_section.html.twig", {'name': 'Register'})}}
 
-    <h1>Register</h1>
 
-    {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.email) }}
-        {{ form_row(registrationForm.plainPassword, {
-            label: 'Password'
-        }) }}
-        {{ form_row(registrationForm.agreeTerms) }}
+	<div class="login_register_wrap section">
+		<div class="container">
+			<div class="row justify-content-center">
+				<div class="col-xl-6 col-md-10">
+					<div class="login_wrap">
+						<div class="padding_eight_all bg-white">
+							<div class="heading_s1">
+								<h3>Création de Compte</h3>
+							</div>
+							<div class="message-flash">
+								{% for flash_error in app.flashes('verify_email_error') %}
+									<div class="alert alert-danger" role="alert">{{ flash_error }}</div>
+								{% endfor %}
+							</div>
+							{{ form_start(registrationForm) }}
+							<div class="form-group">
+								{{ form_row(registrationForm.username) }}
+							</div>
+							<div class="form-group">
+								<div class="form-group">{{ form_row(registrationForm.firstname) }}</div>
+								<div class="form-group">{{ form_row(registrationForm.lastname) }}</div>
+							</div>
+							<div class="form-group">
+								{{ form_row(registrationForm.email) }}
+							</div>
+							<div class="form-group">
+								{{ form_row(registrationForm.plainPassword) }}
+							</div>
 
-        <button type="submit" class="btn">Register</button>
-    {{ form_end(registrationForm) }}
-{% endblock %}
+
+							<div class="form-group">
+								{{ form_row(registrationForm.agreeTerms) }}
+                                <a href="{{path('cgu_conditions')}}" target="blank">Read Conditions</a>
+							</div>
+						</div>
+						<div class="form-group">
+							<button type="submit" class="btn btn-fill-out btn-block" name="register">Register</button>
+						</div>
+						{{ form_end(registrationForm) }}
+						<div class="different_login">
+							<span>
+								or</span>
+						</div>
+						<ul class="btn-login list_none text-center">
+							<li>
+								<a href="#" class="btn btn-facebook">
+									<i class="ion-social-facebook"></i>Facebook</a>
+							</li>
+							<li>
+								<a href="#" class="btn btn-google">
+									<i class="ion-social-googleplus"></i>Google</a>
+							</li>
+						</ul>
+						<div class="form-note text-center">Vous avez déjà un compte? Connectez-vous !
+							<a href="{{path('app_login')}}">Log in</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>{% endblock %}
